--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Michael Long's Project Portfolio</h2>
+							<h2>Michael Long's Professional Portfolio</h2>
 							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
 						</div>
 					</section>
@@ -151,20 +151,20 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
-							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
+<!--							<ul class="contact">-->
+<!--								<li class="icon solid fa-home">-->
+<!--									Untitled Inc<br />-->
+<!--									1234 Somewhere Road Suite #2894<br />-->
+<!--									Nashville, TN 00000-0000-->
+<!--								</li>-->
+<!--								<li class="icon solid fa-phone">(000) 000-0000</li>-->
+<!--								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>-->
+<!--								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>-->
+<!--								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>-->
+<!--								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>-->
+<!--							</ul>-->
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
